<resources>
    <string name="app_name">Appy</string>

    <!-- periods titles -->

    <string name="period_today">today</string>
    <string name="period_last_3_days">last 3 days</string>
    <string name="period_last_week">last week</string>
    <string name="period_last_month">last month</string>
    <string name="period_last_3_months">last 3 months</string>
    <string name="period_last_6_months">last 6 months</string>
    <string name="period_last_year">last year</string>
    <string name="period_all">all</string>

    <!-- splash fragment -->

    <string name="app_by">by Vismus</string>

    <!-- welcome page fragment -->

    <string name="welcome_to_appy">Welcome To Appy!</string>
    <string name="reminders_recommend_p1">We recommend to enable a daily reminder -</string>
    <string name="reminders_recommend_p2">so you won\'t forget to rate your mood</string>
    <string name="reminders_time_p1">Reminder will appear every day</string>
    <string name="reminders_time_p2">at a random time between 10:00 and 20:00</string>
    <string name="reminders_time_edit_p1">The hours can be changed</string>
    <string name="reminders_time_edit_p2">in the \'Options\' menu in the app</string>

    <string name="enable_reminders">Enable reminders</string>
    <string name="not_now">Not now</string>

    <!-- vote fragment -->

    <string name="vote_question">How are you feeling?</string>
    <string name="confirm_vote_reselect">You\'ve already rated your mood today. Do you want to change your selection?</string>

    <!-- options fragment -->

    <string name="options">Options</string>

    <string name="title_reminders">Reminders</string>
    <string name="daily_reminder">Daily reminder at random time</string>
    <string name="between">between</string>
    <string name="and">and</string>
    <string name="sound_on_reminder">Reminder sound</string>

    <string name="title_data_export">Export</string>
    <string name="export_data_to_email">Export data to e-mail</string>
    <string name="export">Export</string>
    <string name="export_data_email_subject">Message from Appy</string>

    <string name="title_data_reset">Delete</string>
    <string name="reset_data">Delete date from app</string>
    <string name="reset">Delete</string>

    <string name="confirm_data_reset">Are you sure you want to delete your data from app?</string>
    <string name="data_was_reset">Data deleted</string>
    <string name="no_data">App contains no data</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>

    <string-array name="arr_day_hours">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
        <item>24:00</item>
    </string-array>

    <!-- averages fragment -->

    <string name="no_vote_today">You haven\'t rated your mood today</string>
    <string name="no_vote_ever">You haven\'t rated your mood at all</string>
    <string name="no_vote_in_period">You haven\'t rated your mood in the %s</string>

    <string name="this_category">This category</string>
    <string name="will_be_available">will be available</string>
    <string name="tomorrow">tomorrow</string>
    <string name="in">in</string>
    <string name="two_days">2 days</string>
    <string name="days">days</string>
    <string name="is_not_available">is unavailable</string>

</resources>