<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@drawable/bg_blue_gradient">

    <!-- header -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layoutDirection="ltr"
        android:background="#97BABC">

        <ImageView
            android:src="@drawable/ic_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:text="@string/options"
            android:textSize="22dp"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <!-- options -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_margin="20dp">

         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- reminders -->

             <RelativeLayout
                android:id="@+id/lay_reminders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txv_title_reminders"
                    android:text="@string/title_reminders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <CheckBox
                    android:id="@+id/chk_daily_reminder"
                    android:text="@string/daily_reminder"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/txv_title_reminders"/>

                 <RelativeLayout
                     android:id="@+id/lay_reminder_hours_range"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/chk_daily_reminder"
                     android:layout_alignStart="@id/chk_daily_reminder">

                     <TextView
                         android:id="@+id/txv_between"
                         android:text="@string/between"
                         android:textSize="17dp"
                         android:textColor="#000000"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="35dp"/>

                     <Spinner
                         android:id="@+id/spn_min_reminder_hour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:entries="@array/arr_day_hours"
                         android:background="@drawable/ic_spinner"
                         android:layout_toRightOf="@id/txv_between"
                         android:layout_marginLeft="10dp"/>
                     
                     <TextView
                         android:id="@+id/txv_and"
                         android:text="@string/and"
                         android:textSize="17dp"
                         android:textColor="#000000"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@id/spn_min_reminder_hour"
                         android:layout_marginLeft="10dp"/>

                     <Spinner
                         android:id="@+id/spn_max_reminder_hour"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:entries="@array/arr_day_hours"
                         android:background="@drawable/ic_spinner"
                         android:layout_marginLeft="10dp"
                         android:layout_toRightOf="@id/txv_and"/>

                 </RelativeLayout>

                 <CheckBox
                    android:id="@+id/chk_reminder_sound"
                    android:text="@string/sound_on_reminder"
                    android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/lay_reminder_hours_range"/>

            </RelativeLayout>

            <!-- export data -->

            <RelativeLayout
                android:id="@+id/lay_data_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay_reminders"
                android:layout_marginTop="10dp">

                <TextView
                    android:text="@string/title_data_export"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/lay_export_data_to_email"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:text="@string/export_data_to_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textColor="#000000"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_export_data"
                    android:text="@string/export"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lay_export_data_to_email"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <!-- reset data -->

            <RelativeLayout
                android:id="@+id/lay_data_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lay_data_export"
                android:layout_marginTop="18dp">

                <TextView
                    android:text="@string/title_data_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:id="@+id/lay_reset_data"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:text="@string/reset_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18dp"
                        android:textColor="#000000"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_reset_data"
                    android:text="@string/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#FF0000"
                    android:layout_below="@id/lay_reset_data"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <!-- back button -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">

        <ImageButton
            android:id="@+id/btn_back"
            android:src="@drawable/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

</LinearLayout>